add:linux audio record

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ IF (WIN32)
 include_directories(./Audio )
 aux_source_directory(./Audio/WIN DIR_AUDIO_SUB_SRCS)
 ELSEIF (APPLE)
-	MESSAGE(STATUS "Now is Apple systens.")
+	MESSAGE(STATUS "Now is Apple systems.")
 ELSEIF (UNIX)
 include_directories(./Audio/Linux ./Audio/Linux/tinyalsa ./Audio/Linux/tinyalsa/include)
 aux_source_directory(./Audio/Linux DIR_AUDIO_SUB_SRCS)
