--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,4 +44,6 @@ include(CPack)
 IF (WIN32)
 target_link_libraries(EasyAIoT winmm)
 target_link_libraries(EasyAIoT ws2_32)
+ELSEIF (UNIX)
+target_link_libraries(EasyAIoT pthread)
 ENDIF ()
